@@ -6,7 +6,7 @@ use warnings;
 use base qw(Exporter Class::ParseText::Base);
 use vars qw($VERSION @EXPORT);
 
-$VERSION = '0.09_02';
+$VERSION = '0.09';
 @EXPORT = qw(create_form);
 
 #$::RD_TRACE = 1;
@@ -234,24 +234,32 @@ sub build {
     }
     
     # remove extraneous undefined values
+    # also check for approriate version of CGI::FormBuilder
+    # for some advanced options
+    my $FB_version = CGI::FormBuilder->VERSION;
     for my $field (@{ $self->{form_spec}{fields} }) {
         defined $$field{$_} or delete $$field{$_} foreach keys %{ $field };
-    }
+        
+        unless ($FB_version >= '3.002') {
+            if ($$field{growable}) {
+                warn '[' . (caller(0))[3] . "] growable fields not supported by FB $FB_version (requires 3.002)";
+                delete $$field{growable};
+            }
+        }
+    }    
     
     # remove false $$_{required} params because this messes up things at
     # the CGI::FormBuilder::field level; it seems to be marking required
     # based on the existance of a 'required' param, not whether it is
     # true or defined
+    # TODO: check if this is still needed
     $$_{required} or delete $$_{required} foreach @{ $self->{form_spec}{fields} };
-
+    
+    # assign the field names to the sections
     foreach (@{ $self->{form_spec}{sections} }) {
-        #for my $line (grep { $$_[0] eq 'field' } @{ $$_{lines} }) {
         for my $line (@{ $$_{lines} }) {
             if ($$line[0] eq 'field') {
                 $$line[1] = $$line[1]{name};
-##                 $_ eq 'name' or delete $$line[1]{$_} foreach keys %{ $$line[1] };
-##             } elsif ($$line[0] eq 'group') {
-##                 $$line[1] = [ map { $$_{name} } @{ $$line[1]{group} } ];
             }
         }
     }
@@ -352,19 +360,6 @@ sub _form_code {
     
     my %module_subs;
     my $d = Data::Dumper->new([ \%options ], [ '*options' ]);
-    
-    use B::Deparse;
-    my $deparse = B::Deparse->new;
-##     
-##     #TODO: need a workaround/better solution since Data::Dumper doesn't like dumping coderefs
-##     foreach (@{ $self->{form_spec}{fields} }) {
-##         if (ref $$_{validate} eq 'CODE') {
-##             my $body = $deparse->coderef2text($$_{validate});
-##             #$d->Seen({ "*_validate_$$_{name}" => $$_{validate} });
-##             #$module_subs{$$_{name}} = "sub _validate_$$_{name} $$_{validate}";
-##         }
-##     }    
-##     my $sub_code = join("\n", each %module_subs);
     
     my $form_options = keys %options > 0 ? $d->Dump : '';
     
@@ -1057,8 +1052,8 @@ This currently only works for single line text fields.
 To create a growable field, add a C<*> after the name (and size, if
 given). Growable fields have a button that allows the user to add a
 copy of the field input. Currently, this only works for C<text> and
-C<file> fields. Growable fields also require JavaScript to function
-correctly.
+C<file> fields, and you must have L<CGI::FormBuilder> 3.02 or higher.
+Growable fields also require JavaScript to function correctly.
 
     # you can have as many people as you like
     person*:text
@@ -1087,20 +1082,6 @@ you should use the C<!list> directive:
     }
     
     month:select@MONTHS
-
-There is another form of the C<!list> directive: the dynamic list:
-
-    !list RANDOM &{ map { rand } (0..5) }
-
-The code inside the C<&{ ... }> is C<eval>ed by C<build>, and the results
-are stuffed into the list. The C<eval>ed code can either return a simple
-list, as the example does, or the fancier C<< ( { value1 => 'Description 1'},
-{ value2 => 'Description 2}, ... ) >> form.
-
-I<B<NOTE:> This feature of the language may go away unless I find a compelling
-reason for it in the next few versions. What I really wanted was lists that
-were filled in at run-time (e.g. from a database), and that can be done easily
-enough with the CGI::FormBuilder object directly.>
 
 If you want to have a single checkbox (e.g. for a field that says ``I want to
 recieve more information''), you can just specify the type as checkbox without
@@ -1179,6 +1160,8 @@ Any line beginning with a C<#> is considered a comment.
 =head1 TODO
 
 Document the commmand line tool
+
+Document use of the parser as a standalone module
 
 Allow renaming of the submit button; allow renaming and inclusion of a 
 reset button
